# completable-future-rs

./: Cargo.toml  README.md
src/: completer.rs  error.rs  lib.rs  state.rs
tests/: basic.rs
