[package]
name = "completable-future"
version = "0.1.0"
authors = ["Greg \"GothAck\" Miell <rust@greg.gothack.ninja>"]
description = "Reimplementation of manual_future without using `futures` unstable"
repository = "https://github.com/GothAck/completable-future-rs"
# categories = ["command-line-utilities"]
license = "MIT"
edition = "2021"

[dependencies]
parking_lot = { version = "0.12", features = ["arc_lock"] }
paste = "1.0"
strum = { version = "0.24", features = ["derive"] }
thiserror = { version = "1.0" }
tracing = { version = "0.1" }

[dev-dependencies]
futures = "0.3"
tokio = { version = "1.20", features = ["macros", "sync", "rt-multi-thread"] }
tracing = "0.1"
tracing-test = "0.2"
